--- a/style.css
+++ b/style.css
@@ -57,3 +57,11 @@ header {
     padding: 9px;
 
 }
+
+.sign-up-form-section {
+    background-image: -webkit-cross-fade( url(http://www.darkcarnival.co.za/wp-content/uploads/2018/01/super-mario-ufo.png), url(DigitalOcean-Assets/img/sign-up-form-background.png), 80%);
+    background-color: #004AFF;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
