--- a/style.css
+++ b/style.css
@@ -63,5 +63,26 @@ header {
     background-color: #004AFF;
     width: 100%;
     height: 500px;
-    object-fit: contain;
+    padding: 55px 250px 55px 125px;
+    display: grid;
+    grid-template-columns: 650px 510px;
+    font-family: 'Inter-Bold','Helvetica','san-serif';
+}
+
+.sign-up-form-section article {
+    align-self: center;
+}
+
+.sign-up-form-section h2 {
+    color: #fff;
+    font-size: 65px;
+    line-height: 110%;
+    margin-bottom: 15px;
+}
+
+.sign-up-form-section p {
+    color: #b9ccff;
+    font-size: 21px;
+    font-weight: 600;
+    line-height: 140%;
 }
