--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
 }
 
 header {
-    /* width: 100%; */
     height: 65px;
     background-color: #fff;
 }
@@ -41,19 +40,12 @@ header {
     color: #1f3560;
     font-family: 'Inter-Medium','Helvetica','san-serif';
     font-weight: 600;
+    justify-self: center;
 }
 
 .header-navigation li {
     display: inline;
     margin-right: 7px;
-}
-
-.header-navigation-center {
-    justify-self: center;
-}
-
-.header-navigation-right {
-    justify-self: right;
 }
 
 .header-menu-down-chevron {
@@ -69,7 +61,7 @@ header {
 
 }
 
-.sign-up-form-container {
+.sign-up-form-section-container {
     background-image: url(DigitalOcean-Assets/img/sign-up-form-background.png);
     background-color: #004AFF;
     height: 500px;
@@ -104,18 +96,86 @@ header {
 
 .sign-up-form-section section {
     width: 100%;
-    height: 100%;
-    max-height: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    padding-top: 1rem;
+    padding-top: 2rem;
     padding-bottom: 1rem;
     background-color: #fff;
     border-radius: 4px;
     text-align: center;
-    /* padding: 40px 18px 29px 18px; */
-}
-.sign-up-form-section section h3 {
-    font-size: 14px;
 }
 
+.sign-up-form {
+    padding: 20px;
+}
+
+.sign-up-form-section section h3 {
+    font-size: 27px;
+    margin-bottom: 10px;
+}
+
+.sign-up-form-header-1 {
+    color: #152b59;
+}
+
+.sign-up-form-header-2 {
+    color: #006aff;
+}
+
+.sign-up-form form {
+    display: grid;
+    gap: 15px;
+}
+
+.sign-up-form input {
+    border: 1px solid #f3f3f3;
+    border-radius: 6px;
+    height: 40px;
+    padding: 4px;
+    font-weight: 500;
+    font-size: 17px;
+}
+
+.sign-up-form button {
+    height: 30px;
+    border-radius: 6px;
+    border: none;
+}
+
+.sign-up-form button p {
+    font-size: 13px;
+}
+
+.native-sign-up-button {
+    background-color: #579aff;
+}
+
+.native-sign-up-button p {
+    color: #fff;
+}
+
+.google-sign-up-button {
+    position: relative;
+    display: grid;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 1px 1px 1px #c9c8c8;
+}
+
+.google-sign-up-button svg {
+    position: absolute;
+    left: 10px;
+}
+
+.google-sign-up-button p {
+    color: #707070;
+}
+
+#sign-up-terms-and-conditions {
+    font-size: 11px;
+    color: #132a58;
+}
+
+#sign-up-terms-and-conditions a {
+    color: #4691ff;
+}
