--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root{
+    --primary-color: #fff;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -20,7 +24,7 @@ body {
 
 header {
     height: 65px;
-    background-color: #fff;
+    background-color: var(--primary-color)
 }
 
 .header {
@@ -211,3 +215,87 @@ header {
     font-weight: 600;
 }
 
+.optimization-section-container {
+    background-color: var(--primary-color);
+}
+
+.optimization-section {
+    /* max-height: 800px;   */
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 6rem;
+    padding-bottom: 3rem;
+    font-family: 'Inter-Bold','Helvetica','san-serif';
+}
+
+.optimization-top-text {
+    text-align: center;
+}
+
+h2.optimization-top-text {
+    color: #031c4e;
+    font-size: 34px;
+    margin-bottom: 13px;
+}
+
+p.optimization-top-text {
+    color: #65728e;
+    font-weight: 600;
+    font-size: 22px;
+}
+
+.optimization-section div {
+    display: grid;
+    grid-template: 
+        "list cluster types " auto
+        "list apps global " auto /
+        1fr 1fr 1fr;
+
+    padding: 4rem 1rem 0 1rem;
+    margin: auto;
+    max-height: 600px;
+    max-width: 1100px;
+    gap: 26px;
+}
+
+.optimization-section div ul {
+    grid-area: list;
+    border-left: 3px solid #cecece;
+    font-weight: 600;
+    font-size: 22px;
+    color: #6e7a95;
+    list-style: none;
+    padding-left: 10px;
+    height: 65%;
+    display: grid;
+    align-items: center;
+}
+
+.cluster > *, .types > *, .apps > *, .global > * {
+    margin-bottom: 10px;
+}
+
+.cluster h3, .types h3, .apps h3, .global h3 {
+    color: #0d2554;
+}
+
+.cluster p, .types p, .apps p, .global p {
+    color: #6e7a95;
+    font-weight: 600;
+}
+
+.cluster {
+    grid-area: cluster;
+}
+
+.types {
+    grid-area: types;
+}
+
+.apps {
+    grid-area: apps;
+}
+
+.global {
+    grid-area: global;
+}
